@@ -12,34 +12,85 @@
  *
  * @return void
  */
-function thewire_tools_create_object_event_handler($event, $type, $object) {
+function thewire_tools_create_object_event_handler($event, $type, ElggObject $object) {
 	
-	if (elgg_instanceof($object, "object", "thewire")) {
-		//send out notification to users mentioned in a wire post
-		$usernames = array();
+	if (empty($object) || !elgg_instanceof($object, "object", "thewire")) {
+		return;
+	}
+	
+	//send out notification to users mentioned in a wire post
+	$usernames = array();
+	preg_match_all("/\@([A-Za-z0-9\_\.\-]+)/i", $object->description, $usernames);
+	
+	if (empty($usernames)) {
+		return;
+	}
+	
+	$usernames = array_unique($usernames[0]);
+	$params = array(
+		"object" => $object,
+		"action" => "mention"
+	);
+	
+	foreach ($usernames as $username) {
+		$username = str_ireplace("@", "", $username);
+		$user = get_user_by_username($username);
 		
-		if (preg_match_all("/\@([A-Za-z0-9\_\.\-]+)/i", $object->description, $usernames)) {
-			$usernames = array_unique($usernames[0]);
+		if (empty($user) || ($user->getGUID() == $object->getOwnerGUID())) {
+			continue;
+		}
 			
-			foreach ($usernames as $username) {
-				$username = str_ireplace("@", "", $username);
-				$user = get_user_by_username($username);
+		$setting = thewire_tools_get_notification_settings($user->getGUID());
+		if (empty($setting)) {
+			continue;
+		}
+		
+		$subject = elgg_echo("thewire_tools:notify:mention:subject");
+		$message = elgg_echo("thewire_tools:notify:mention:message", array(
+			$user->name,
+			$object->getOwnerEntity()->name,
+			elgg_normalize_url("thewire/search/@" . $user->username)
+		));
+		
+		notify_user($user->getGUID(), $object->getOwnerGUID(), $subject, $message, $params, $setting);
+	}
+}
+
+/**
+ * Listen to the upgrade event to make sure upgrades can be run
+ *
+ * @param string $event  the name of the event
+ * @param string $type   the type of the event
+ * @param null   $object nothing
+ *
+ * @return void
+ */
+function thewire_tools_upgrade_system_event_handler($event, $type, $object) {
+	
+	// Upgrade also possible hidden entities. This feature get run
+	// by an administrator so there's no need to ignore access.
+	$access_status = access_get_show_hidden_status();
+	access_show_hidden_entities(true);
+	
+	// register an upgrade script
+	$options = array(
+		"type" => "user",
+		"plugin_id" => "thewire_tools",
+		"plugin_user_setting_name" => "notify_mention",
+		"count" => true
+	);
+	$count = elgg_get_entities_from_plugin_user_settings($options);
+	if ($count) {
+		$path = "admin/upgrades/thewire_tools_mentions";
+		$upgrade = new ElggUpgrade();
+		if (!$upgrade->getUpgradeFromPath($path)) {
+			$upgrade->setPath($path);
+			$upgrade->title = "TheWire Tools mentions upgrade";
+			$upgrade->description = "The way mention notifications are handled has changed. Run this script to make sure all settings are migrated.";
 				
-				if (!empty($user) && ($user->getGUID() != $object->getOwnerGUID())) {
-					$user_setting = elgg_get_plugin_user_setting("notify_mention", $user->getGUID(), "thewire_tools");
-					
-					if ($user_setting === "yes") {
-						$subject = elgg_echo("thewire_tools:notify:mention:subject");
-						$message = elgg_echo("thewire_tools:notify:mention:message", array(
-							$user->name,
-							$object->getOwnerEntity()->name,
-							elgg_get_site_url() . "thewire/search/@" . $user->username
-						));
-						
-						notify_user($user->getGUID(), $object->getOwnerGUID(), $subject, $message);
-					}
-				}
-			}
+			$upgrade->save();
 		}
 	}
+	
+	access_show_hidden_entities($access_status);
 }
